--- a/src/components/SideNav/SideBar.css
+++ b/src/components/SideNav/SideBar.css
@@ -7,25 +7,26 @@
 }
 
 .menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
+  margin-top: 105px;
+  margin-left: 10px;
+  font-size: 36px;
   background: none;
 }
 
 .nav-menu {
   background-color: #060b26;
-  width: 250px;
+  width: 50px;
   height: 100vh;
   display: flex;
   justify-content: center;
   position: fixed;
   top: 0;
-  left: -100%;
   transition: 850ms;
 }
 
 .nav-menu.active {
   left: 0;
+  width: 250px;
   transition: 350ms;
 }
 
@@ -38,7 +39,29 @@
   height: 60px;
 }
 
-.nav-text a {
+.nav-text.hide {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 8px 8px;
+  list-style: none;
+  height: 60px;
+  transition: 350ms;
+}
+
+.nav-text a{
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.nav-text.hide a{
   text-decoration: none;
   color: #f5f5f5;
   font-size: 18px;
