--- a/src/components/SideNav/SideBar.css
+++ b/src/components/SideNav/SideBar.css
@@ -7,8 +7,8 @@
 }
 
 .menu-bars {
-  margin-top: 105px;
-  margin-left: 10px;
+  margin-top: 2rem;
+  margin-left: 2rem;
   font-size: 36px;
   background: none;
 }
@@ -21,12 +21,12 @@
   justify-content: center;
   position: fixed;
   top: 0;
+  left: 0;
   transition: 850ms;
 }
 
 .nav-menu.active {
   left: 0;
-  width: 250px;
   transition: 350ms;
 }
 
