--- a/src/components/SideNav/SideBar.css
+++ b/src/components/SideNav/SideBar.css
@@ -36,7 +36,7 @@
   align-items: center;
   padding: 8px 0px 8px 16px;
   list-style: none;
-  height: 60px;
+  height: 6 0px;
 }
 
 .nav-text.hide {
