--- a/src/static/site.css
+++ b/src/static/site.css
@@ -1,21 +1,31 @@
 :root {
     font-family: 'Roboto Slab', serif;
-    --text-dark-bg: #431678;
+    --text-dark-bg: #541678;
     --text-primary-bg: #5d4778;
-    --text-color: #b4b8b5;
+    --text-color: #d3d3d3;
 }
 
 .scrolling-header {
     background-color: var(--text-dark-bg);
-    color: #f2da3a;
+    color: #e6de8b;
     padding: 50px, 10px;
     text-align: center;
-    font-size: 90px;
+    font-size: 65px;
     font-weight: bold;
     position: fixed;
+    display: flex;
+    text-decoration: none;
     width: 100%;
     top: 0;
     transition: 0.3s;
+}
+
+.header-text a {
+    padding: 50px, 10px;
+    text-decoration: none;
+    color: #e6de8b;
+    display: flex;
+    text-align: center;
 }
 
 body {
