--- a/src/components/SideNav/SideBar.css
+++ b/src/components/SideNav/SideBar.css
@@ -1,94 +1,56 @@
 .navbar {
-  background-color: #060b26;
-  height: 80px;
+  height: 70px;
+  top: 0;
   display: flex;
   justify-content: start;
   align-items: center;
-}
-
-.menu-bars {
-  margin-top: 2rem;
-  margin-left: 2rem;
-  font-size: 36px;
-  background: none;
+  float: left;
+  left: 0px;
 }
 
 .nav-menu {
-  background-color: #060b26;
-  width: 50px;
+  width: 240px;
   height: 100vh;
-  display: flex;
-  justify-content: center;
+  display: block;
   position: fixed;
-  top: 75px;
-  transition: 850ms;
+  float: left;
+  list-style: none;
+  left: 0;
 }
 
-.nav-menu.active {
-  width: 250px;
-  transition: 350ms;
+.nav-menu-items {
+  list-style-type: none;
+  left: 0;
+  margin: 0;
+  padding: 8px 8px 8px 8px;
 }
 
 .nav-text {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 8px 0px 8px 8px;
-  list-style: none;
-  height: 60px;
-  transition: 350ms
-}
-
-.nav-text.hide {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 0px 0px 8px 16px;
-  list-style: none;
-  height: 60px;
-  transition: 350ms;
+  float: left;
 }
 
 .nav-text a{
   text-decoration: none;
-  color: #f5f5f5;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: flex;
+  color:rgb(190, 183, 183);
+  font-size: 20px;
+  display: block;
+  padding: 14px 8px 16px 8px;
   align-items: center;
-  padding: 0 16px;
   border-radius: 4px;
   list-style: none;
-}
-
-.nav-text.hide a{
-  text-decoration: none;
-  color: #f5f5f5;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0px 16px;
-  list-style: none;
+  left: -10px;
+  width: 200px;
+  background-color: #541678;
+  transition: 550ms;
 }
 
 .nav-text a:hover {
-  background-color: #1a83ff;
-}
-
-.nav-menu-items {
-  width: 100%;
-}
-
-.navbar-toggle {
-  background-color: #060b26;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
+  background-color: #b713e9;
+  color: white;
+  transition: 100ms;
+  left: 0;
+  width: 230px;
+  transition: 550ms;
 }
 
 span {
